--- a/app/src/main/res/values-hdpi/strings.xml
+++ b/app/src/main/res/values-hdpi/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="title_activity_main">La Sainte Trinité</string>
+    <string name="title_activity_main">La Dernière Trompète</string>
 
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
