--- a/app/src/main/res/values-rn/strings.xml
+++ b/app/src/main/res/values-rn/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Kuregera</string>
     <string name="blue">Ubururu</string>
     <string name="contenant">handitsemwo (* = vyose)</string>
-    <string name="copyright">yakozwe na Guy Michel na Konstrictor wo muri UDEV Team</string>
+    <string name="copyright">yakozwe na Guy Michel</string>
     <string name="green">Urwatsi rubisi</string>
     <string name="language">Ururimi :</string>
     <string name="maroon">Inginagina</string>
@@ -37,12 +37,11 @@
     <string name="septembre">Nyakanga</string>
     <string name="suppression">Guhanagura</string>
     <string name="supprimer">Hanagura</string>
-    <string name="title_activity_main">Ubutatu</string>
     <string name="audio_is_loading">iriko irategurwa ...</string>
     <string name="du">" yo kw'itariki "</string>
     <string name="blue_selected">Hahiswemwo Ubururu</string>
     <string name="green_selected">hahiswemwo Urwatsi Rubisi</string>
-    <string name="maroon_selected">Hahiswemwo inginagina</string>
+    <string name="maroon_selected">Hahiswemwo Inginagina</string>
     <string name="about">Ibitwerekeye</string>
     <string name="others">Ibindi</string>
     <string name="testify">Gushinga Intahe</string>
